# CG-noise

./: .gitignore  CMakeLists.txt  README.md  build-libnoise.sh
src/: main.cpp
